# SimpleFS

./: .gitignore  CMakeLists.txt  CMakePresets.json  REFERENCE.md  build.sh  stress_test.py
include/: disk_io.h  fuse_ops.h  metadata.h  simplefs.h  simplefs_context.h  utils.h
src/: disk_io.cpp  fuse_ops.cpp  main.cpp  metadata.cpp  utils.cpp
tools/: fsck.cpp  mkfs.cpp
